         level information (Fred).
20110514 tzx_write.c: add support for writing PZX blocks to TZX files (Fred).
20110515 tap.c: add support for the TZX set signal level block (Fred).
20110515 tzx_write.c: factor out common code for writing signal level and pure
         tone blocks (Fred).
20110608 accessor.pl,snap_accessors.txt,snapshot.c,szx.c: beginnings of
         Spectranet snapshot support.
20110610 accessor.pl,snap_accessors.txt,szx.c: pretty much working Spectranet
         snapshot support.
20110611 accessor.pl,snap_accessors.txt,szx.c: implement Spectranet
         programmable trap support.
20110619 accessor.pl,snap_accessors.txt,szx.c: implement Spectranet "deny
         downstream A15 flag".
20110621 accessor.pl,snap_accessors.txt,szx.c: implement Spectranet "paged via
         IO port" flag.
20110622 accessor.pl,snapshot.c,snap_accessors.txt,szx.c: store core W5100
         state in snapshots.
20110811 libspectrum.h.in,libspectrum.c: add support for detecting POK files
         (patch #3382538) (Sergio Baldoví).
20110905 libspectrum.c,make-perl.c,myglib/garray.c: remove operations with
         uninitialised pointers in libspectrum_make_room, at stopping RZX
         recordings or saving snapshots (part of patch #3404090) (Sergio
         Baldoví).
20111106 rzx.c,szx.c: remove unused variables (thanks, gcc 4.6).
20120203 csw.c: fix less than 0 check on unsigned expression (thanks, clang
         2.1) (Fred).
20120203 szx.c: correct error argument in libspectrum_print_error() calls
         (thanks, clang 2.1) (Fred).
20120220 make-perl.c: advertise that we support bzip2 compressed and wav files
         (part of patch #3413549) (Sergio Baldoví).
20120327 configure.in,Makefile.am,acinclude.m4: simplify detection of GLib
         and drop support for version 1.x (patch #3508792) (Alberto Garcia)
20120327 configure.in: add support for audiofile 0.3.x (patch #3508658) (Alberto
         Garcia).