@@ -166,7 +166,7 @@ int main(void)
 "						 gpointer	 data);\n"
 "\n"
 "WIN32_DLL GSList *g_slist_remove		(GSList		*list,\n"
-"						 gpointer	 data);\n"
+"						 gconstpointer	 data);\n"
 "\n"
 "WIN32_DLL GSList *g_slist_last			(GSList		*list);\n"
 "\n"
@@ -187,7 +187,7 @@ int main(void)
 "					 guint		n);\n"
 "\n"
 "WIN32_DLL GSList *g_slist_find_custom	(GSList		*list,\n"
-"					 gpointer	data,\n"
+"					 gconstpointer	data,\n"
 "					 GCompareFunc	func );\n"
 "\n"
 "WIN32_DLL gint	g_slist_position	(GSList		*list,\n"
